CAUSEWAY-3411: [Demo] JUnit Test approvals

--- a/examples/demo/testing/jpa/src/test/java/demoapp/testing/jpa/SpinUpDemoJpaTest.verify.approved.yaml
+++ b/examples/demo/testing/jpa/src/test/java/demoapp/testing/jpa/SpinUpDemoJpaTest.verify.approved.yaml
@@ -21,10 +21,6 @@ ObjectSpecifications:
   - demo.ActionLayoutPromptStyleVm(demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage)
   - demo.ActionLayoutRedirectPolicyVm(demoapp.dom.domain.actions.ActionLayout.redirectPolicy.ActionLayoutRedirectPolicyPage)
   - demo.ActionLayoutSequenceVm(demoapp.dom.domain.actions.ActionLayout.sequence.ActionLayoutSequencePage)
-  - demo.AssociatedAction(demoapp.dom.domain.actions.progmodel.assoc.AssociatedActionDemo)
-  - demo.AssociatedActionDemoTask(demoapp.dom.domain.actions.progmodel.assoc.DemoItem)
-  - demo.DependentArgsDemoItem(demoapp.dom.domain.actions.progmodel.depargs.DemoItem)
-  - demo.DependentArgs(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo)
   - demo.CollectionDomainEventVm(demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventPage)
   - demo.CollectionDomainEventChildVm(demoapp.dom.domain.collections.Collection.domainEvent.child.CollectionDomainEventChildVm)
   - demo.CollectionHiddenVm(demoapp.dom.domain.collections.Collection.hidden.CollectionHiddenPage)
@@ -54,15 +50,19 @@ ObjectSpecifications:
   - demo.DomainObjectLayoutBookmarkingVmNested(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarkingNestedVm)
   - demo.DomainObjectLayoutBookmarkingVm(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarkingPage)
   - demo.DomainObjectLayoutCssClassPage(demoapp.dom.domain.objects.DomainObjectLayout.cssClass.DomainObjectLayoutCssClassPage)
-  - demo.DomainObjectLayoutCssClassFaVm(demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.DomainObjectLayoutCssClassFaPage)
-  - demo.DomainObjectLayoutDescribedAsVm(demoapp.dom.domain.objects.DomainObjectLayout.describedAs.DomainObjectLayoutDescribedAsPage)
-  - demo.DomainObjectLayoutNamedVm(demoapp.dom.domain.objects.DomainObjectLayout.named.DomainObjectLayoutNamedPage)
-  - demo.DomainObjectLayoutPagedVm(demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage)
+  - demo.DomainObjectLayoutCssClassFaPage(demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.DomainObjectLayoutCssClassFaPage)
+  - demo.DomainObjectLayoutDescribedAsPage(demoapp.dom.domain.objects.DomainObjectLayout.describedAs.DomainObjectLayoutDescribedAsPage)
+  - demo.DomainObjectLayoutNamedPage(demoapp.dom.domain.objects.DomainObjectLayout.named.DomainObjectLayoutNamedPage)
+  - demo.DomainObjectLayoutPagedPage(demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage)
   - demo.DomainObjectLayoutTableDecoratorVm(demoapp.dom.domain.objects.DomainObjectLayout.tabledec.DomainObjectLayoutTableDecoratorPage)
   - demo.DomainObjectLayoutXxxUiEventVm(demoapp.dom.domain.objects.DomainObjectLayout.xxxUiEvent.DomainObjectLayoutXxxUiEventPage)
-  - demo.EmbeddedTypeVm(demoapp.dom.domain.objects.other.embedded.EmbeddedTypeVm)
-  - demo.FibonacciNumberVm(demoapp.dom.domain.objects.other.mixins.FibonacciNumberVm)
-  - demo.MixinVm(demoapp.dom.domain.objects.other.mixins.MixinVm)
+  - demo.AssociatedAction(demoapp.dom.domain.progmodel.actions.assoc.assoc.AssociatedActionDemo)
+  - demo.AssociatedActionDemoTask(demoapp.dom.domain.progmodel.actions.assoc.assoc.DemoItem)
+  - demo.DependentArgsDemoItem(demoapp.dom.domain.progmodel.actions.depargs.depargs.DemoItem)
+  - demo.DependentArgs(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo)
+  - demo.EmbeddedTypeVm(demoapp.dom.domain.progmodel.objects.embedded.embedded.EmbeddedTypeVm)
+  - demo.FibonacciNumberVm(demoapp.dom.domain.progmodel.objects.mixins.mixins.FibonacciNumberVm)
+  - demo.MixinVm(demoapp.dom.domain.progmodel.objects.mixins.mixins.MixinVm)
   - demo.PropertyDomainEventPage(demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventPage)
   - demo.PropertyEditingPage(demoapp.dom.domain.properties.Property.editing.PropertyEditingPage)
   - demo.PropertyEditingReasonDisabledPage(demoapp.dom.domain.properties.Property.editingReasonDisabled.PropertyEditingReasonDisabledPage)
@@ -239,7 +239,13 @@ ObjectSpecifications:
   - demo.DomainObjectLayoutBookmarkingChildJpa(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.jpa.DomainObjectLayoutBookmarkingChildJpa)
   - demo.DomainObjectLayoutBookmarkingJpa(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.jpa.DomainObjectLayoutBookmarkingJpa)
   - demo.DomainObjectLayoutCssClassJpa(demoapp.dom.domain.objects.DomainObjectLayout.cssClass.jpa.DomainObjectLayoutCssClassJpa)
-  - demo.NumberConstantEntity(demoapp.dom.domain.objects.other.embedded.jpa.NumberConstantJpa)
+  - demo.DomainObjectLayoutCssClassFaJpa(demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.jpa.DomainObjectLayoutCssClassFaJpa)
+  - demo.DomainObjectLayoutDescribedAsJpa(demoapp.dom.domain.objects.DomainObjectLayout.describedAs.jpa.DomainObjectLayoutDescribedAsJpa)
+  - demo.DomainObjectLayoutNamedJpa(demoapp.dom.domain.objects.DomainObjectLayout.named.jpa.DomainObjectLayoutNamedJpa)
+  - demo.DomainObjectLayoutPagedJpa(demoapp.dom.domain.objects.DomainObjectLayout.paged.jpa.DomainObjectLayoutPagedJpa)
+  - demo.DomainObjectLayoutTableDecoratorJpa(demoapp.dom.domain.objects.DomainObjectLayout.tabledec.jpa.DomainObjectLayoutTableDecoratorJpa)
+  - demo.DomainObjectLayoutXxxUiEventJpa(demoapp.dom.domain.objects.DomainObjectLayout.xxxUiEvent.jpa.DomainObjectLayoutXxxUiEventJpa)
+  - demo.NumberConstantEntity(demoapp.dom.domain.progmodel.objects.embedded.embedded.jpa.NumberConstantJpa)
   - demo.PropertyCommandPublishingEntity(demoapp.dom.domain.properties.Property.commandPublishing.jpa.PropertyCommandPublishingJpa)
   - demo.PropertyExecutionPublishingEntity(demoapp.dom.domain.properties.Property.executionPublishing.jpa.PropertyExecutionPublishingJpa)
   - demo.PropertyProjectingChildJpa(demoapp.dom.domain.properties.Property.projecting.jpa.PropertyProjectingChildJpa)
@@ -299,14 +305,14 @@ ObjectSpecifications:
   MANAGED_BEAN_CONTRIBUTING:
   - demo.ActionMenu(demoapp.dom.domain.actions.Action.ActionMenu)
   - demo.ActionLayoutMenu(demoapp.dom.domain.actions.ActionLayout.ActionLayoutMenu)
-  - demo.AssociatedActionMenu(demoapp.dom.domain.actions.progmodel.assoc.AssociatedActionMenu)
-  - demo.DependentArgsActionMenu(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionMenu)
   - demo.CollectionMenu(demoapp.dom.domain.collections.Collection.CollectionMenu)
   - demo.CollectionLayoutMenu(demoapp.dom.domain.collections.CollectionLayout.CollectionLayoutMenu)
   - demo.DomainObjectMenu(demoapp.dom.domain.objects.DomainObject.DomainObjectMenu)
   - demo.DomainObjectLayoutMenu(demoapp.dom.domain.objects.DomainObjectLayout.DomainObjectLayoutMenu)
-  - demo.EmbeddedTypeMenu(demoapp.dom.domain.objects.other.embedded.EmbeddedTypeMenu)
-  - demo.MixinMenu(demoapp.dom.domain.objects.other.mixins.MixinMenu)
+  - demo.AssociatedActionMenu(demoapp.dom.domain.progmodel.actions.assoc.assoc.AssociatedActionMenu)
+  - demo.DependentArgsActionMenu(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionMenu)
+  - demo.EmbeddedTypeMenu(demoapp.dom.domain.progmodel.objects.embedded.embedded.EmbeddedTypeMenu)
+  - demo.MixinMenu(demoapp.dom.domain.progmodel.objects.mixins.mixins.MixinMenu)
   - demo.PropertyMenu(demoapp.dom.domain.properties.Property.PropertyMenu)
   - demo.PropertyLayoutMenu(demoapp.dom.domain.properties.PropertyLayout.PropertyLayoutMenu)
   - demo.WhereInTheWorldMenu(demoapp.dom.featured.customui.vm.WhereInTheWorldMenu)
@@ -411,15 +417,6 @@ ObjectSpecifications:
   - demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutDialog(demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutDialog)
   - demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutInline(demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutInline)
   - demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutInlineAsIfEdit(demoapp.dom.domain.actions.ActionLayout.promptStyle.ActionLayoutPromptStylePage_layoutInlineAsIfEdit)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_bulkAction(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_bulkAction)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useAutoComplete(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useAutoComplete)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useAutoComplete2(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useAutoComplete2)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useChoices(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useChoices)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useChoices2(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useChoices2)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useDefault(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useDefault)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useDisable(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useDisable)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useHide(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useHide)
-  - demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useIndependent(demoapp.dom.domain.actions.progmodel.depargs.DependentArgsActionDemo_useIndependent)
   - demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventPage_changeControlStrategy(demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventPage_changeControlStrategy)
   - demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventPage_controlStrategy(demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventPage_controlStrategy)
   - demoapp.dom.domain.objects.DomainObject.aliased.DomainObjectAliasedPage_lookup(demoapp.dom.domain.objects.DomainObject.aliased.DomainObjectAliasedPage_lookup)
@@ -453,10 +450,26 @@ ObjectSpecifications:
   - demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarkingPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarkingPage_objects)
   - demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarking_addChildren(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarking_addChildren)
   - demoapp.dom.domain.objects.DomainObjectLayout.cssClass.DomainObjectLayoutCssClassPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.cssClass.DomainObjectLayoutCssClassPage_objects)
-  - demoapp.dom.domain.objects.other.embedded.jpa.NumberConstantJpa_updateNumber(demoapp.dom.domain.objects.other.embedded.jpa.NumberConstantJpa_updateNumber)
-  - demoapp.dom.domain.objects.other.mixins.CountHolder_explanation(demoapp.dom.domain.objects.other.mixins.CountHolder_explanation)
-  - demoapp.dom.domain.objects.other.mixins.CountHolder_fibonacciSequence(demoapp.dom.domain.objects.other.mixins.CountHolder_fibonacciSequence)
-  - demoapp.dom.domain.objects.other.mixins.CountHolder_updateCount(demoapp.dom.domain.objects.other.mixins.CountHolder_updateCount)
+  - demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.DomainObjectLayoutCssClassFaPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.DomainObjectLayoutCssClassFaPage_objects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.describedAs.DomainObjectLayoutDescribedAsPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.describedAs.DomainObjectLayoutDescribedAsPage_objects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.named.DomainObjectLayoutNamedPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.named.DomainObjectLayoutNamedPage_objects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage_actionReturningObjects(demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage_actionReturningObjects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPagedPage_objects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.tabledec.DomainObjectLayoutTableDecoratorPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.tabledec.DomainObjectLayoutTableDecoratorPage_objects)
+  - demoapp.dom.domain.objects.DomainObjectLayout.xxxUiEvent.DomainObjectLayoutXxxUiEventPage_objects(demoapp.dom.domain.objects.DomainObjectLayout.xxxUiEvent.DomainObjectLayoutXxxUiEventPage_objects)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_bulkAction(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_bulkAction)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useAutoComplete(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useAutoComplete)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useAutoComplete2(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useAutoComplete2)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useChoices(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useChoices)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useChoices2(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useChoices2)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useDefault(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useDefault)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useDisable(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useDisable)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useHide(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useHide)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useIndependent(demoapp.dom.domain.progmodel.actions.depargs.depargs.DependentArgsActionDemo_useIndependent)
+  - demoapp.dom.domain.progmodel.objects.embedded.embedded.jpa.NumberConstantJpa_updateNumber(demoapp.dom.domain.progmodel.objects.embedded.embedded.jpa.NumberConstantJpa_updateNumber)
+  - demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_explanation(demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_explanation)
+  - demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_fibonacciSequence(demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_fibonacciSequence)
+  - demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_updateCount(demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder_updateCount)
   - demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventPage_changeControlStrategy(demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventPage_changeControlStrategy)
   - demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventPage_controlStrategy(demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventPage_controlStrategy)
   - demoapp.dom.domain.properties.Property.fileAccept.PropertyFileAcceptPage_updateClobWithParameterLayout(demoapp.dom.domain.properties.Property.fileAccept.PropertyFileAcceptPage_updateClobWithParameterLayout)
@@ -938,11 +951,11 @@ ObjectSpecifications:
   - char(char)
   - demoapp.dom._infra.samples.DemoEnum(demoapp.dom._infra.samples.DemoEnum)
   - demoapp.dom.domain.actions.Action.domainEvent.ActionDomainEventControlStrategy(demoapp.dom.domain.actions.Action.domainEvent.ActionDomainEventControlStrategy)
-  - demoapp.dom.domain.actions.progmodel.depargs.Parity(demoapp.dom.domain.actions.progmodel.depargs.Parity)
   - demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventControlStrategy(demoapp.dom.domain.collections.Collection.domainEvent.CollectionDomainEventControlStrategy)
   - demoapp.dom.domain.objects.DomainObject.xxxDomainEvent.DomainObjectXxxDomainEventControlStrategy(demoapp.dom.domain.objects.DomainObject.xxxDomainEvent.DomainObjectXxxDomainEventControlStrategy)
-  - demoapp.dom.domain.objects.other.embedded.jdo.ComplexNumberJdo(demoapp.dom.domain.objects.other.embedded.jdo.ComplexNumberJdo)
-  - demoapp.dom.domain.objects.other.embedded.jpa.ComplexNumberJpa(demoapp.dom.domain.objects.other.embedded.jpa.ComplexNumberJpa)
+  - demoapp.dom.domain.progmodel.actions.depargs.depargs.Parity(demoapp.dom.domain.progmodel.actions.depargs.depargs.Parity)
+  - demoapp.dom.domain.progmodel.objects.embedded.embedded.jdo.ComplexNumberJdo(demoapp.dom.domain.progmodel.objects.embedded.embedded.jdo.ComplexNumberJdo)
+  - demoapp.dom.domain.progmodel.objects.embedded.embedded.jpa.ComplexNumberJpa(demoapp.dom.domain.progmodel.objects.embedded.embedded.jpa.ComplexNumberJpa)
   - demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventControlStrategy(demoapp.dom.domain.properties.Property.domainEvent.PropertyDomainEventControlStrategy)
   - demoapp.dom.domain.properties.PropertyLayout.navigable.FileNodeType(demoapp.dom.domain.properties.PropertyLayout.navigable.FileNodeType)
   - demoapp.dom.services.core.eventbusservice.EventLogEntry.Acknowledge(demoapp.dom.services.core.eventbusservice.EventLogEntry.Acknowledge)
@@ -1064,8 +1077,14 @@ ObjectSpecifications:
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarking)
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.bookmarking.DomainObjectLayoutBookmarkingChild)
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.cssClass.DomainObjectLayoutCssClass)
-  - demo.NumberConstantEntity(demoapp.dom.domain.objects.other.embedded.persistence.NumberConstantEntity)
-  - demo.CountHolder(demoapp.dom.domain.objects.other.mixins.CountHolder)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.cssClassFa.DomainObjectLayoutCssClassFa)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.describedAs.DomainObjectLayoutDescribedAs)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.named.DomainObjectLayoutNamed)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.paged.DomainObjectLayoutPaged)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.tabledec.DomainObjectLayoutTableDecorator)
+  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObjectLayout.xxxUiEvent.DomainObjectLayoutXxxUiEvent)
+  - demo.NumberConstantEntity(demoapp.dom.domain.progmodel.objects.embedded.embedded.persistence.NumberConstantEntity)
+  - demo.CountHolder(demoapp.dom.domain.progmodel.objects.mixins.mixins.CountHolder)
   - demo.PropertyCommandPublishingEntity(demoapp.dom.domain.properties.Property.commandPublishing.PropertyCommandPublishingEntity)
   - demo.PropertyExecutionPublishingEntity(demoapp.dom.domain.properties.Property.executionPublishing.PropertyExecutionPublishingEntity)
   - demo.PropertyProjectingChildEntity(demoapp.dom.domain.properties.Property.projecting.persistence.PropertyProjectingChildEntity)
