--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -180,6 +180,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <shiro.version>2.0.0-alpha-1</shiro.version> <!-- latest release was 1.10.0, however we need jakarta namespace support -->
         <simpleslackapi.version>1.4.0</simpleslackapi.version>
         <slf4j-api.version>2.0.7</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
+        <snakeyaml.version>2.0</snakeyaml.version>
         <spring-boot.version>3.0.5</spring-boot.version>
         <summernote.version>0.8.20</summernote.version>
         <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
