--- a/examples/demo/wicket/common/pom.xml
+++ b/examples/demo/wicket/common/pom.xml
@@ -59,7 +59,6 @@
 		<dependency>
 			<groupId>org.apache.causeway.examples.apps</groupId>
 			<artifactId>demo-web</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 
 
@@ -110,6 +109,11 @@
 		<dependency>
 			<groupId>org.apache.causeway.extensions</groupId>
 			<artifactId>causeway-extensions-fullcalendar-wicket-ui</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.causeway.extensions</groupId>
+			<artifactId>causeway-extensions-exceldownload-wicket-ui</artifactId>
 		</dependency>
 
 	</dependencies>
