--- a/regressiontests/stable/pom.xml
+++ b/regressiontests/stable/pom.xml
@@ -113,6 +113,16 @@
 			<type>pom</type>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-wicket-viewer</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- <dependency> -->
 		<!-- <groupId>org.glassfish.jersey.ext</groupId> -->
