--- a/examples/demo/web/pom.xml
+++ b/examples/demo/web/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>causeway-mavendeps-webapp</artifactId>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
+			<scope>optional</scope>
+		</dependency>
 
 		<!-- DEMO DOMAIN -->
 
