--- a/regressiontests/stable-viewers-jpa/pom.xml
+++ b/regressiontests/stable-viewers-jpa/pom.xml
@@ -39,6 +39,10 @@
 			<artifactId>causeway-mavendeps-webapp</artifactId>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-wicket-viewer</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.causeway.persistence</groupId>
