--- a/antora/playbooks/site-incubator.yml
+++ b/antora/playbooks/site-incubator.yml
@@ -37,9 +37,9 @@ content:
     - url: .
       start_path: incubator/adoc # incubator
       branches: HEAD
-    - url: .
-      start_path: incubator/clients/kroviz/adoc # incubator
-      branches: HEAD
+    #- url: .
+    #  start_path: incubator/clients/kroviz/adoc # incubator
+    #  branches: HEAD
     - url: .
       start_path: incubator/extensions/core/commandreplay/adoc # incubator
       branches: HEAD
