--- a/.github/workflows/ci-build-artifacts-no-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-no-push-maven.yml
@@ -51,6 +51,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Extract branch name
+      shell: bash
+      run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >>$GITHUB_OUTPUT
+      id: extract_branch
+
     - name: Set up JDK 18
       if: matrix.language == 'java'
       uses: actions/setup-java@v3
@@ -97,8 +102,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Build Artifacts
-      if: matrix.language == 'java'
+    - name: Build Artifacts (Main)
+      if: matrix.language == 'java' && steps.extract_branch.outputs.branch == 'master'
       shell: bash
       run: bash $CI_SCRIPTS_PATH/build-artifacts.sh
       env:
@@ -110,6 +115,24 @@ jobs:
         # -T 1C ... 1 build thread per core
         MVN_ADDITIONAL_OPTS: >-
           -Dmodule-all
+          -Dproject.build.outputTimestamp=1
+          -Dmaven.source.skip=true
+          -Denforcer.failFast=true
+          -e
+          
+    - name: Build Artifacts (Edge)
+      if: matrix.language == 'java' && steps.extract_branch.outputs.branch == 'spring6'
+      shell: bash
+      run: bash $CI_SCRIPTS_PATH/build-artifacts.sh
+      env:
+        # -Dmodule-all ... build all modules (default if all is well)
+        # -Dmodule-all-except-incubator ... build all modules except 'incubator' (eg. when vaadin build fails)
+        # -Dmodule-all-except-kroviz ... build all modules except 'kroviz' (eg. when kroviz build fails)
+        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
+        # -Dmaven.source.skip=true ... no need for the CI build to pull sources
+        # -T 1C ... 1 build thread per core
+        MVN_ADDITIONAL_OPTS: >-
+          -Dmodule-all-except-kroviz
           -Dproject.build.outputTimestamp=1
           -Dmaven.source.skip=true
           -Denforcer.failFast=true
