--- a/.github/workflows/ci-build-artifacts-no-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-no-push-maven.yml
@@ -99,8 +99,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Build Artifacts (Main)
-      if: matrix.language == 'java' && env.BRANCH_NAME == 'master'
+    - name: Build Artifacts
+      if: matrix.language == 'java'
       shell: bash
       run: bash $CI_SCRIPTS_PATH/build-artifacts.sh
       env:
@@ -112,24 +112,6 @@ jobs:
         # -T 1C ... 1 build thread per core
         MVN_ADDITIONAL_OPTS: >-
           -Dmodule-all
-          -Dproject.build.outputTimestamp=1
-          -Dmaven.source.skip=true
-          -Denforcer.failFast=true
-          -e
-          
-    - name: Build Artifacts (Edge)
-      if: matrix.language == 'java' && env.BRANCH_NAME == 'spring6'
-      shell: bash
-      run: bash $CI_SCRIPTS_PATH/build-artifacts.sh
-      env:
-        # -Dmodule-all ... build all modules (default if all is well)
-        # -Dmodule-all-except-incubator ... build all modules except 'incubator' (eg. when vaadin build fails)
-        # -Dmodule-all-except-kroviz ... build all modules except 'kroviz' (eg. when kroviz build fails)
-        # -Denforcer.failFast=true ... fail fast on convergence issues (enforcer plugin)
-        # -Dmaven.source.skip=true ... no need for the CI build to pull sources
-        # -T 1C ... 1 build thread per core
-        MVN_ADDITIONAL_OPTS: >-
-          -Dmodule-all-except-kroviz
           -Dproject.build.outputTimestamp=1
           -Dmaven.source.skip=true
           -Denforcer.failFast=true
