CAUSEWAY-2485: reworks @Property#labelPosition

--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -48,9 +48,9 @@ causeway:
         command-publishing: none
         execution-publishing: none
       property-layout:
-        label-position: LEFT
+        label-position: left
       parameter-layout:
-        label-position: LEFT
+        label-position: left
 
   core:
     meta-model:
