--- a/core/runtimeservices/pom.xml
+++ b/core/runtimeservices/pom.xml
@@ -77,11 +77,12 @@
 		    <artifactId>jakarta.mail-api</artifactId>
 		</dependency>
 		
+		<!-- required by EmailServiceDefault on v2, n/a f. v3
 		<dependency>
-			<!-- required by EmailServiceDefault -->
     		<groupId>com.sun.mail</groupId>
     		<artifactId>jakarta.mail</artifactId>
 		</dependency>
+		-->
 	
         <dependency>
             <groupId>org.apache.causeway.core</groupId>
