--- a/core/runtimeservices/pom.xml
+++ b/core/runtimeservices/pom.xml
@@ -76,12 +76,6 @@
 		    <groupId>jakarta.mail</groupId>
 		    <artifactId>jakarta.mail-api</artifactId>
 		</dependency>
-		
-		<dependency>
-			<!-- required by EmailServiceDefault -->
-    		<groupId>com.sun.mail</groupId>
-    		<artifactId>jakarta.mail</artifactId>
-		</dependency>
 	
         <dependency>
             <groupId>org.apache.causeway.core</groupId>
@@ -91,6 +85,12 @@
         <dependency>
             <groupId>org.apache.causeway.core</groupId>
             <artifactId>causeway-core-codegen-bytebuddy</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.activation</groupId>
+                    <artifactId>jakarta.activation</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
 		<!-- TESTING -->
@@ -106,8 +106,56 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
+    
+    <profiles>
+        <profile>
+            <id>email-notification-service</id>
+            <activation>
+                <property>
+                    <name>!skip.email-notification-service</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-email</artifactId>
+                    <exclusions>
+                        <!--
+                        excluded because provided by javax:javaee-api
+                        note: moved javax.mail from 1.5.2 to 1.5.0
+                        note: moved activation from 1.1.1 to 1.1    ... don't know if this is significant.
+                        -->
+                        <exclusion>
+                            <groupId>com.sun.mail</groupId>
+                            <artifactId>javax.mail</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>javax.activation</groupId>
+                            <artifactId>activation</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+					<!-- required by EmailServiceDefault -->
+		    		<groupId>com.sun.mail</groupId>
+		    		<artifactId>jakarta.mail</artifactId>
+		    		<exclusions>
+			    		<exclusion>
+                            <groupId>javax.activation</groupId>
+                            <artifactId>activation</artifactId>
+	                    </exclusion>
+	                    <exclusion>
+	                    	<groupId>com.sun.activation</groupId>
+    						<artifactId>jakarta.activation</artifactId>
+    					</exclusion>
+                    </exclusions>
+				</dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
 </project>
