CAUSEWAY-2485: fleshes out @CollectionLayout#named and #paged

--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -51,6 +51,8 @@ causeway:
         label-position: left
       parameter-layout:
         label-position: left
+      collection-layout:
+        paged: 15
 
   core:
     meta-model:
