--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -53,6 +53,7 @@ causeway:
         label-position: left
       collection-layout:
         paged: 15
+        table-decorator: org.apache.causeway.applib.annotation.TableDecorator.DatatablesNet
 
   core:
     meta-model:
