--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -184,6 +184,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <spring-boot.version>3.1.0</spring-boot.version>
         <summernote.version>0.8.20</summernote.version>
         <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
+        <surefire.useModulePath>false</surefire.useModulePath> <!-- disable module-path for testing, that is, put everything on the class-path -->
         <swagger-core.version>2.2.10</swagger-core.version>
 
         <togglz.version>3.3.3</togglz.version>
