--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -177,6 +177,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <spring-boot.version>2.7.12</spring-boot.version>
         <summernote.version>0.8.20</summernote.version>
         <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
+        <surefire.useModulePath>false</surefire.useModulePath> <!-- disable module-path for testing, that is, put everything on the class-path -->
         <swagger-core.version>2.2.10</swagger-core.version>
 
         <togglz.version>3.3.3</togglz.version>
@@ -557,13 +558,6 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 			<dependency>
 				<groupId>org.apache.causeway.viewer</groupId>
 				<artifactId>causeway-viewer-wicket-applib</artifactId>
-				<version>2.0.0-SNAPSHOT</version>
-				<type>jar</type>
-				<scope>compile</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.causeway.viewer</groupId>
-				<artifactId>causeway-viewer-wicket-graceful</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>jar</type>
 				<scope>compile</scope>
