CAUSEWAY-3275: IDE issues, failing to build the Wicket UI tests since JUnit-API is forced onto the module-path by Wicket.
- So as a workaround putting tests into their own artifact. (At least
works for Eclipse.)

--- a/viewers/wicket/pom.xml
+++ b/viewers/wicket/pom.xml
@@ -114,8 +114,9 @@
     <modules>
         <module>applib</module>
         <module>model</module>
-        <module>viewer</module>
         <module>ui</module>
+        <module>ui-test</module>
+        <module>viewer</module>
     </modules>
 
 </project>
