--- a/viewers/wicket/ui-test/pom.xml
+++ b/viewers/wicket/ui-test/pom.xml
@@ -23,8 +23,13 @@
 
 	<artifactId>causeway-viewer-wicket-ui-test</artifactId>
 	<name>Apache Causeway Viewer - Wicket (UI Test)</name>
+    <description>Eclipse IDE failes to build the UI tests since junit-api is forced onto the module-path by Wicket. 
+		So as a workaround putting tests into their own artifact.</description>
 
 	<properties>
+		<maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+
 		<jar-plugin.automaticModuleName>org.apache.causeway.viewer.wicket.ui.test</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/viewer/wicket/ui-test</git-plugin.propertiesDir>
 	</properties>
@@ -57,6 +62,5 @@
 		</dependency>
 
 	</dependencies>
-
 
 </project>
