CAUSEWAY-2445: try to fix nightly build
- maven-source-plugin 3.3.0 is more strict now, does not allow package
duplicates

- https://github.com/apache/maven-source-plugin/commit/c20e142cc40151c3060b54878cf21537719b2e63

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2393,10 +2393,10 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 					<executions>
 						<execution>
 							<id>package-jars</id>
-							<phase>package</phase>
+							<!-- <phase>package</phase> failing since maven-source-plugin 3.3.0 -->
 							<goals>
 								<goal>jar</goal>
-								<goal>test-jar</goal>
+								<!-- <goal>test-jar</goal> failing since maven-source-plugin 3.3.0 -->
 							</goals>
 						</execution>
 					</executions>
