--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2390,16 +2390,18 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 					<!-- goal:aggregate (for aggregator modules) binds to phase:package -->
 					<!-- goal:jar and goal:test-jar are meant to bind to phase:package,
 						but doesn't seem to so bound explicitly -->
+					<!-- failing since maven-source-plugin 3.3.0 (as duplicated with built-in goal 'jar-no-fork')
 					<executions>
 						<execution>
 							<id>package-jars</id>
-							<!-- <phase>package</phase> failing since maven-source-plugin 3.3.0 -->
+							<phase>package</phase> 
 							<goals>
 								<goal>jar</goal>
-								<!-- <goal>test-jar</goal> failing since maven-source-plugin 3.3.0 -->
+								<goal>test-jar</goal>
 							</goals>
 						</execution>
 					</executions>
+					-->
 				</plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
