--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2390,7 +2390,8 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 					<!-- goal:aggregate (for aggregator modules) binds to phase:package -->
 					<!-- goal:jar and goal:test-jar are meant to bind to phase:package,
 						but doesn't seem to so bound explicitly -->
-					<!-- failing since maven-source-plugin 3.3.0 (as duplicated with built-in goal 'jar-no-fork')
+					<!-- failing since maven-source-plugin 3.3.0 (as duplicated runs 
+					 		are no longer alloed; there is a clash with built-in goal 'jar-no-fork')
 					<executions>
 						<execution>
 							<id>package-jars</id>
@@ -3206,7 +3207,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
                         <version>3.1.1</version>
                         <configuration>
                             <altDeploymentRepository>
-                                nightly-localfs-repo::default::file://${MVN_SNAPSHOTS_PATH}
+                                nightly-localfs-repo::file://${MVN_SNAPSHOTS_PATH}
                             </altDeploymentRepository>
                         </configuration>
                     </plugin>
