CAUSEWAY-3467: fixes demo case and adds missing auto complete facet to param

--- a/examples/demo/testing/jpa/src/test/java/demoapp/testing/jpa/SpinUpDemoJpaTest.verify.approved.yaml
+++ b/examples/demo/testing/jpa/src/test/java/demoapp/testing/jpa/SpinUpDemoJpaTest.verify.approved.yaml
@@ -1176,7 +1176,7 @@ ObjectSpecifications:
   - demo.ValueHolder(demoapp.dom.domain.actions.Action.executionPublishing.ActionExecutionPublishingEntity)
   - demo.ValueHolder(demoapp.dom.domain.actions.ActionLayout.hidden.ActionLayoutHiddenEntity)
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObject.aliased.DomainObjectAliasedEntity)
-  - demo.ValueHolder(demoapp.dom.domain.objects.DomainObject.autoComplete.DomainObjectAutoCompleteEntity)
+  - demo.DomainObjectAutoCompleteEntityAbstract(demoapp.dom.domain.objects.DomainObject.autoComplete.DomainObjectAutoCompleteEntity)
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObject.bounded.DomainObjectBoundingEntity)
   - demo.ValueHolder(demoapp.dom.domain.objects.DomainObject.editing.DomainObjectEditingEntity)
   - demo.DomainObjectEntityChangePublishingEntity(demoapp.dom.domain.objects.DomainObject.entityChangePublishing.DomainObjectEntityChangePublishingEntity)
